// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders the danger variant 1`] = `
<button
  class="inline-flex cursor-pointer items-center justify-center gap-2 rounded-box py-2 text-sm font-semibold transition-colors disabled:cursor-not-allowed disabled:opacity-50 bg-app-error text-palette-white hover:bg-tomato px-4"
  type="button"
>
  Action
</button>
`;

exports[`Button > renders the ghost variant 1`] = `
<button
  class="inline-flex cursor-pointer items-center justify-center gap-2 rounded-box py-2 text-sm font-semibold transition-colors disabled:cursor-not-allowed disabled:opacity-50 bg-secondary text-palette-bg hover:bg-primary px-4"
  type="button"
>
  Action
</button>
`;

exports[`Button > renders the loading state 1`] = `
<button
  class="inline-flex cursor-pointer items-center justify-center gap-2 rounded-box py-2 text-sm font-semibold transition-colors disabled:cursor-not-allowed disabled:opacity-50 bg-third text-palette-white hover:bg-tomato px-4"
  disabled=""
  type="button"
>
  <span
    class="inline-flex items-center gap-2"
    role="status"
  >
    <span
      aria-hidden="true"
      class="size-4 animate-spin rounded-full border-2 border-third border-t-transparent"
    />
    <span
      class="sr-only"
    >
      Loading
    </span>
  </span>
  Action
</button>
`;

exports[`Button > renders the primary variant 1`] = `
<button
  class="inline-flex cursor-pointer items-center justify-center gap-2 rounded-box py-2 text-sm font-semibold transition-colors disabled:cursor-not-allowed disabled:opacity-50 bg-third text-palette-white hover:bg-tomato px-4"
  type="button"
>
  Action
</button>
`;
